[gd_scene load_steps=15 format=2]

[ext_resource path="res://Actors/Ennemies/BrownHyena/Brown Hyena-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Actors/Ennemies/BrownHyena/brownHyena.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.5828
height = 20.4294

[sub_resource type="Animation" id=2]
resource_name = "AttackLeft"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/biteHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24.726, 2.51984 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.575, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24.8834, 3.46478 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/biteHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.30728, 3.33786e-06 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunLeft"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DetectionBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24.8904, 1.31458 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.30728, 3.33786e-06 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunRight"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DetectionBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24.2535, -0.629963 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.30728, 3.33786e-06 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DetectionBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -21.0806, 0.340454 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.157, 0 ) ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DetectionBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 26.7056, 0.758465 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.30728, 3.33786e-06 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Damage"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Rest"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.41692
height = 17.6635

[sub_resource type="CapsuleShape2D" id=11]
radius = 15.6975
height = 25.9546

[sub_resource type="CapsuleShape2D" id=12]
radius = 5.85541
height = 19.3138

[node name="brownhyena" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
vframes = 2
hframes = 29
frame = 10

[node name="FloorCollider" type="CollisionShape2D" parent="."]
modulate = Color( 0.172549, 0.862745, 0.815686, 1 )
position = Vector2( -1.34998, 0.159286 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackLeft = SubResource( 2 )
anims/AttackRight = SubResource( 3 )
anims/RunLeft = SubResource( 4 )
anims/RunRight = SubResource( 5 )
anims/WalkLeft = SubResource( 6 )
anims/WalkRight = SubResource( 7 )

[node name="DamageStatePlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 8 )
anims/Rest = SubResource( 9 )

[node name="DetectionBox" type="Area2D" parent="."]
position = Vector2( -21.0806, 0.340454 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
modulate = Color( 0.87451, 0.654902, 0.184314, 1 )
position = Vector2( -2.66971, 2.43502 )
shape = SubResource( 10 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -0.157, 0 )
scale = Vector2( 1, 1.12243 )
collision_layer = 160
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.929412, 0.168627, 0.168627, 1 )
position = Vector2( 0.140315, -0.306141 )
rotation = -1.5708
shape = SubResource( 11 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -24.726, 2.51984 )
rotation = 3.14159

[node name="biteHitbox" type="Area2D" parent="Position2D"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/biteHitbox"]
modulate = Color( 0.584314, 0.129412, 0.866667, 1 )
shape = SubResource( 12 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2.85838, 1 )
[connection signal="killed" from="." to="." method="_on_brownhyena_killed"]
[connection signal="area_entered" from="DetectionBox" to="." method="_on_DetectionBox_area_entered"]
[connection signal="area_exited" from="DetectionBox" to="." method="_on_DetectionBox_area_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
